ui/k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appset-ui
  namespace: appset-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: appset-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: appset-ui
    spec:
      containers:
        - name: main
          image: gopalvithaljayanthi/apspet-ui:v1moreadv
          command: ["python"]
          args: ["/app/app.py"]
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: appset-script
              mountPath: "/app/app.py"
              subPath: "app.py"
      volumes:
        - name: appset-script
          configMap:
            name: appset-ui
