ui/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appset-ui
  namespace: appset-ui
spec:
  selector:
    app.kubernetes.io/name: appset-ui
  ports:
  - name: http
    port: 5000
    targetPort: 5000
